Complete initial styling./

--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <div class="container">
-      <h1>Tick-Tack-Toe!</h1>
-      <div class="board">
-        <div class="board-box" id="1">X</div>
-        <div class="board-box" id="2">0</div>
-        <div class="board-box" id="3">0</div>
-        <div class="board-box" id="4">0</div>
-        <div class="board-box" id="5">X</div>
-        <div class="board-box" id="6">X</div>
-        <div class="board-box" id="7">X</div>
-        <div class="board-box" id="8">0</div>
-        <div class="board-box" id="9">X</div>
-      </div>
+    <h1>Tick-Tack-Toe!</h1>
+    <div class="board">
+      <div class="board-box" id="1">X</div>
+      <div class="board-box" id="2">0</div>
+      <div class="board-box" id="3">0</div>
+      <div class="board-box" id="4">0</div>
+      <div class="board-box" id="5">X</div>
+      <div class="board-box" id="6">X</div>
+      <div class="board-box" id="7">X</div>
+      <div class="board-box" id="8">0</div>
+      <div class="board-box" id="9">X</div>
     </div>
+    <h1>Current player: X</h1>
   </body>
 </html>
