Added pubsub.js to script.js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tick-Tack-Toe</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer></script>
+    <script src="./scripts/game.js" defer></script>
+    <script src="./scripts/pubsub.js" defer></script>
+    <script src="./scripts/gameboard.js" defer></script>
+    <script src="./script.js"></script>
   </head>
   <body>
     <h1>Tick-Tack-Toe!</h1>
